k8s/flask/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskwebapp
spec:
  selector:
    matchLabels:
      app: flaskwebapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaskwebapp
    spec:
      containers:
      - image: sriramsurendhran/ecommerce-webapp
        imagePullPolicy: Always
        name: flaskwebapp
